<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitle"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/AjoutRapport"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_AjouterRapport"
        android:text="@string/AjouterRapport"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/Txt_RechercheMedecin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        android:text="@string/RechercheMedecin"
        android:textSize="17dp" />

    <EditText
        android:id="@+id/Edit_RechercheMedecin"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_Medecin"
        android:text="@string/Medecin"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/Edit_Medecin"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_MotifRapport"
        android:text="@string/MotifRapport"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/Edit_MotifRapport"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_BilanRapport"
        android:text="@string/BilanRapport"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/Edit_BilanRapport"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_DateRapport"
        android:text="@string/DateRapport"
        android:onClick="showDatePickerDialog"
        android:textSize="19dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_DateRapport"
        android:text="@string/AfficheDate"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_MedicamentsOfferts"
        android:text="@string/MedicamentsOfferts"
        android:textSize="17dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_NouveauMedicament"
        android:text="@string/NouveauMedicament"
        android:textSize="19dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_Enregistrer"
        android:text="@string/Enregistrer"
        android:layout_gravity="center"
        android:textSize="19dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

</LinearLayout>
</ScrollView>