<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitle"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/ListeRapports"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_AfficheColonnes"
        android:text="@string/AfficheColonnes"
        android:layout_gravity="right"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_ChoisirDate"
        android:text="@string/ChoisirDate"
        android:layout_gravity="center"
        android:textSize="19dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_DateVisite"
        android:text="@string/DateVisite"
        android:textSize="17dp"
        android:textAlignment="center"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>