<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/TitreRapport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitle"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/RapportDeVisite"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageGSB"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/gsb"
        android:layout_marginBottom="25px"
        />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_ModifierRapport"
        android:text="@string/ModifierRapport"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="25dp"
        android:textSize="19dp"
        />

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_AjouterRapport"
        android:text="@string/AjouterRapport"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:textSize="19dp"
        />

</LinearLayout>