<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitle"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/mesMedecins"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Txt_RechercheMedecin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:text="@string/RechercheMedecin"
        android:textSize="17dp"
        />

    <EditText
        android:id="@+id/Edit_RechercheMedecin"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <EditText
        android:id="@+id/Edit_Medecin"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_VoirModifierInfos"
        android:text="@string/VoirModifierInfos"
        android:layout_gravity="center"
        android:textSize="19dp"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/Btn_VoirRapportsMedecin"
        android:text="@string/VoirRapportsMedecin"
        android:layout_gravity="center"
        android:textSize="19dp"
        android:layout_marginTop="10dp"
        />

</LinearLayout>